[tool.poetry]
name = "robokassa-sdk"
version = "0.1.0"
description = "SDK для удобной работы с Robokassa"
authors = ["artemdorozhkin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
